Fixed (hopefully) apply clickability on mobile

--- a/style.css
+++ b/style.css
@@ -264,6 +264,7 @@ a:visited {
     margin-right: 5%;
     width:75%;
     margin-top: 0px;
+    pointer-events: auto;
   }
   .applyspringbutton {
     margin-left: -8px;
@@ -275,6 +276,7 @@ a:visited {
   }
   .applybutton {
       padding-top: 35px;
+      pointer-events: auto;
   }
   .about {
       margin-top: 75px;
